# TSK200

./: .gitignore  CMakeLists.txt  Makefile  README.md  TSK200.md  meson.build  test_runner  xmake.lua
custom/: buildimg  shutdown.c
imageraw/: init
imgfiles/imageraw/: init
sample-commands/: sample.topo
sample-commands/self-diagnostic/: INA.topo  INX.tsk  MIDA.topo  MIDX.topo
sample-commands/self-diagnostic-stack/: OUT.topo  self-diagnostic-stack.md
sample-commands/sequence-generator/: inB.topo  out_expected.txt  sequence-generator.md
sample-commands/signal-amplification/: OUT_expected.txt  input.tsk  signal-amplication.md
sample-commands/signal-pattern-detector/: LOW.topo  LOW.tsk  LOWR.topo  MID.topo  OUT.topo  OUT_expected.txt
sigh-commands/: input.tsk  nodeA.topo  nodeA.tsk  nodeB.topo  nodeB.tsk
sigh-commands/samples/sequence-generator/: BR.topo  BR.tsk  MU.topo  OU.topo  OU.tsk
sigh-commands/samples/signal-amplification/: input.topo  input.tsk
src/: args.c  args.h  constants.c  constants.h  tsk.c  tsk_os.c
src/tsk/: instruction.c  instruction.h  meson.build  node.c  node.h  pipe.h  tsk_constants.h  tsk_loader.c  tsk_loader.h
src/tsk-src/: instruction.c  instruction.h  node.c  node.h  opcodes.c  opcodes.h  operation_constants.h  tsk_constants.h  tsk_loader.c  tsk_loader.h
src/tsk-src/utils/: linkedlist.c  linkedlist.h
src/tsk_misc/: meson.build  tsk_loader.c  tsk_loader.h
src/utils/: meson.build  strfun.h
test/: runner.c  test_statics.h
test/test_files/tsk_loader/: bigjro.tsk  jump.tsk  math.tsk  smalljro.tsk
test/tsk/: node_external.c  node_init.c  node_internal.c  node_jump.c  node_math.c
test/tsk_loader/: loader_labels.c  loader_math.c
tsk/: Makefile  tsk
tsk/sample-commands/: sample.tsk
tsk/sample-commands/self-diagnostic/: INA.tsk  INX.topo  OUTX.topo  self-diagnostic.md
tsk/sample-commands/self-diagnostic-stack/: OUT_expected.txt  nodeB.topo  nodeC.topo
tsk/src/: args.c  args.h  constants.c  constants.h
tsk/test/: runner.c
tsk/utilities/: create-input-text.py
tsk_os/custom/: init  tskkernel
tsk_os/src/: tsk_os.c
tsk_pl/src/: tsk.c
tsk_pl/test/: test_statics.h
(+34 files in other folders)
